cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-paths-list.yaml-core-only/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/invalid-paths-list.yaml:7
7 |   - '*.py'
  |   ^

each paths should be a dictionary

[ERROR] Rule parse error in rule arg-reassign:
 each paths should be a dictionary
